[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15.0"

